# ContactDiscoveryService

./: .gitignore  README.md  pom.xml
.github/actions/enclave/: action.yml
.github/workflows/: enclave.yml
client/: Cargo.toml  Makefile  README.md  gentoken.py  ias-test.store  pom.xml  rustfmt.toml
client/cds_api/: Cargo.toml
client/cds_api/src/: entities.rs  lib.rs
client/cds_api_client/: Cargo.toml
client/cds_api_client/src/: lib.rs  main.rs
client/cds_client/: Cargo.toml
client/cds_client/src/: error.rs  lib.rs
enclave/: Cargo.toml  Dockerfile  Makefile  bolt_skip_funcs.txt  libcds_benchmark.lds  libcds_enclave.debug.config.xml  libcds_enclave.hardened.config.xml  libcds_enclave.lds  libsabd-enclave.debug.config.xml  libsabd_enclave.config.xml  libsabd_enclave.lds  rustfmt.license-template  rustfmt.toml  sgx_enclave.mk
enclave-ffi-rust/: Cargo.toml  build.rs  rustfmt.license-template
enclave-ffi-rust/src/: ffi.rs  lib.rs
enclave-ffi-rust/src/ffi/: bindgen_wrapper.h  ocalls.rs  sgxsd.rs
enclave/c_src/: sgxsd-enclave-test.c  sgxsd-enclave.c
enclave/c_src/bearssl/: config.h
enclave/cds_benchmark/: Cargo.toml  build.rs
enclave/cds_benchmark/benches/: hash_lookup.rs  ratelimit_set.rs
enclave/cds_benchmark/src/: lib.rs
enclave/cds_enclave/: Cargo.toml  build.rs
enclave/cds_enclave/.cargo/: config
enclave/cds_enclave/benches/: ratelimit_set.rs
enclave/cds_enclave/c_src/: cds-enclave-hash.rs  cds-enclave-hash.rs.s  cds-enclave-ratelimit-set.rs  cds-enclave-ratelimit-set.rs.s
enclave/cds_enclave/c_src/cttk/: config.h
enclave/cds_enclave/src/: allocator.rs  ffi.rs  hasher.rs  lib.rs  macros.rs  service.rs
enclave/cds_enclave/src/ffi/: bindgen_wrapper.h  bindgen_wrapper.rs  cttk.rs  hash_lookup.rs  panic.rs  ratelimit_set.rs  sgxsd.rs
enclave/cds_enclave/src/service/: main.rs
enclave/debian/: buildinfo  changelog  control  copyright  libsabd-enclave1.install  rules
enclave/debian/source/: lintian-overrides
enclave/docker/: Dockerfile  apt.conf  build-deps  debrebuild.pl  reproducible.asc  rustup-init.sha256  sources.list
enclave/include/: cds-enclave-hash.h  cds-enclave-ratelimit-set.h  cds.edl  cds.h  cds_enclave.edl  cds_enclave_t.c  cds_enclave_t.h  cds_enclave_u.c  cds_enclave_u.h  cmockery.h  curve25519-donna.h  dlmalloc.h  sabd.h  sabd_enclave.edl  sabd_enclave_t.c  sabd_enclave_t.h  sgxsd-enclave.h  sgxsd.edl  sgxsd.h  test_memset_s.h
enclave/include/bearssl/: bearssl.h  bearssl_aead.h  bearssl_ssl.h
enclave/jni/: Makefile
enclave/jni/src/: sabd_enclave_u.c  sabd_enclave_u.h  sgxsd-jni.c  sgxsd.c
enclave/patches/: linux-sgx-rep-stringops.patch
enclave/sgx_ffi/: Cargo.toml
enclave/sgx_ffi/src/: bindgen_wrapper.h  bindgen_wrapper.rs  lib.rs  mocks.rs  sgx.rs  untrusted_slice.rs  util.rs
enclave/sgxsd_enclave/: cmockery.c  sgxsd-enclave.c
enclave/sgxsd_enclave/bearssl/: inner.h
enclave/sgxsd_ffi/: Cargo.toml
enclave/sgxsd_ffi/src/: bindgen_wrapper.h  bindgen_wrapper.rs  ecalls.rs  lib.rs  mocks.rs
enclave/src/: sabd-enclave-test.c  sabd-enclave.c  sabd-enclave.c.s  sabd_enclave_t.c  sabd_enclave_t.h  sgx-tcrypto-stub.c  sgxsd-enclave-test.c  sgxsd-enclave.c
enclave/src/bearssl/: gcm.c  inner.h
enclave/test_ffi/: Cargo.toml
enclave/test_ffi/src/: lib.rs
ratelimiter/: .gitignore  Cargo.toml  Makefile
ratelimiter/.cargo/: config
ratelimiter/config/: ratelimiter.sample.yml
ratelimiter/docker/: Dockerfile  linux-sgx.tar.gz.sha256
ratelimiter/kbuptlsd/: Cargo.toml
ratelimiter/kbuptlsd/.cargo/: config
ratelimiter/kbuptlsd/src/: base64.rs  client.rs  config.rs  counter.rs  lib.rs  main.rs  proxy_child.rs  server.rs  util.rs
ratelimiter/kbuptlsd/src/client/: hyper.rs
ratelimiter/kbuptlsd/src/server/: logger.rs
ratelimiter/kbuptlsd/tests/: mock_child.sh  server_test.rs  util.rs
ratelimiter/rld/: Cargo.toml
ratelimiter/rld/benches/: common.rs
ratelimiter/rld/src/: actor.rs  constants.rs  intel_client.rs  lib.rs  logger.rs  main.rs  mocks.rs  unix_signal.rs  util.rs
ratelimiter/rld/src/api/: listener.rs  mod.rs  service.rs
ratelimiter/rld/src/api/auth/: anonymous_user.rs  mod.rs  signal_user.rs
ratelimiter/rld/src/discovery/: manager.rs  mod.rs  request_manager.rs
ratelimiter/rld/src/enclave/: enclave.rs  enclave_manager.rs  error.rs  handshake_manager.rs  mod.rs  ratelimit_state.rs
ratelimiter/rld/src/limits/: leaky_bucket.rs  mod.rs  rate_limiter.rs
ratelimiter/rld/src/metrics/: json_reporter.rs  macros.rs  metrics.rs  mod.rs  registry.rs  reporter.rs
ratelimiter/rld/src/service/: config.rs  mod.rs
ratelimiter/rld_api/: Cargo.toml
ratelimiter/rld_api/src/: entities.rs
ratelimiter/rld_api_client/: Cargo.toml
ratelimiter/rld_api_client/src/: lib.rs  main.rs
ratelimiter/rld_client/: Cargo.toml
ratelimiter/rld_client/src/: lib.rs
ratelimiter/rld_config/: Cargo.toml
ratelimiter/rld_config/src/: lib.rs  main.rs  metrics.rs  ratelimiter.rs
ratelimiter/rustunnel/: Cargo.toml  build.rs
ratelimiter/rustunnel/c_src/: malloc.c
ratelimiter/rustunnel/src/: lib.rs  logger.rs  proxy.rs  seccomp.rs  stream.rs  tls.rs  util.rs
ratelimiter/rustunnel/tests/: client_child_test.rs  server_child_test.rs  util.rs
service/: .gitignore  assembly-azure-production.xml  assembly-azure-staging.xml  assembly-production.xml  assembly-staging.xml  assembly-testing.xml  pom.xml
service/ci/azure-pipelines/: master.yml  test_with_enclave_rebuild.yml
service/ci/azure-pipelines/jobs/: docker_build_cds_enclave_builder.yml  docker_build_cds_jni_builder.yml  docker_build_cds_ratelimiter_builder.yml  enclave_ffi_tests.yml  make_llvm_bolt.yml  ratelimiter_service_tests.yml  rebuild_enclave.yml  service_tests.yml
service/config/: sample.yml
service/protobuf/: Directory.proto  Makefile
service/src/main/jni/cds_jni/: Cargo.toml
service/src/main/jni/cds_jni/src/: directory_map_native.rs  ffi.rs  jniimpl.rs  lib.rs  sgx_enclave.rs
service/src/main/jni/cds_jni/src/directory_map_native/: internal_buffers.rs  io.rs
service/src/main/jni/cds_jni/src/ffi/: ffi.rs
(+184 files in other folders)
