[package]
authors = ["Signal Messenger, LLC."]
name    = "cds_api_client"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
anyhow       = "1.0"
base64       = "0.12"
bytes        = "0.5"
cds_api      = { path = "../cds_api" }
cds_client   = { path = "../cds_client" }
cookie       = "0.14"
env_logger   = "0.7"
futures      = "0.3"
hex          = "0.4"
http         = "0.2"
hyper        = "0.13"
hyper-tls    = "0.4"
log          = { version = "0.4", features = ["std"] }
native-tls   = "0.2"
rand         = "0.7"
rand_distr   = "0.2"
ring         = "0.16"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
structopt    = "0.3"
thiserror    = "1.0"
tokio        = { version = "0.2", features = ["rt-threaded", "macros", "net", "time", "dns"] }
tokio-tls    = "0.3"
try_future   = "0.1"
uuid         = { version = "0.8", features = ["v4"] }
