[package]
authors     = ["Signal Messenger, LLC."]
name        = "kbuptlsd"
version     = "1.0.1"
license     = "AGPL-3.0-or-later"
description = "Key Backup Service TLS Unwrapper Daemon"
edition     = "2018"

[dependencies]
base64           = "0.10"
chrono           = "0.4"
clap             = "2.33"
failure          = "0.1"
futures          = "0.1"
hyper            = { version = "0.12", optional = true }
libc             = "0.2"
log              = { version = "0.4", features = ["std"] }
nix              = "0.13"
mio              = "0.6"
regex            = "1.1"
serde            = "1.0"
serde_derive     = "1.0"
serde_yaml       = "0.8"
tk-listen        = "0.2"
tokio            = "0.1"
rustunnel        = { path = "../rustunnel" }

[dev-dependencies]
rand_core   = "0.5"
rand_chacha = "0.2"
