[package]
authors = ["Signal Messenger, LLC."]
name    = "rld_client"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
bytes        = "0.4"
byteorder    = "1.3"
failure      = "0.1"
rand         = "0.6"
ring         = "0.14"
rld_api      = { path = "../rld_api" }
x25519-dalek = { version = "0.5", default-features = false, features = ["u64_backend"] }
