[package]
authors     = ["Signal Messenger, LLC."]
name        = "rld_config"
version     = "0.1.0"
license     = "AGPL-3.0-or-later"
description = "Rate Limiter Daemon Config"
edition     = "2018"

[features]
default = ["structopt"]

[dependencies]
structopt    = { version = "0.3", optional = true }
kbupd_util   = { git = "https://github.com/signalapp/sgx_common.git", rev = "580489343a37517d96451a5c0950d462d3e86a3b" }
serde        = "1.0"
serde_derive = "1.0"
serde_yaml   = "0.8"

[[bin]]
name = "rld-config"
path = "src/main.rs"
required-features = ["structopt"]
