[package]
authors     = ["Signal Messenger, LLC."]
name        = "rustunnel"
version     = "0.1.0"
license     = "AGPL-3.0-or-later"
description = "Sandboxed TLS tunnel library"
edition     = "2018"
build       = "build.rs"

[dependencies]
clear_on_drop = "0.2"
failure       = "0.1"
libc          = "0.2"
log           = { version = "0.4", features = ["std"] }
nix           = "0.13"
openssl       = { rev = "ea6761d5e7b63b415b7fda6ba5c5026f4218bcd0", git = "https://github.com/signalapp/rust-openssl.git" }
seccomp-sys   = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
native-tls  = "0.2"
rand_core   = "0.5"
rand_chacha = "0.2"

[[test]]
name    = "client_child_test"
harness = false

[[test]]
name    = "server_child_test"
harness = false
