[package]
authors = ["Signal Messenger, LLC"]
name    = "cds_jni"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
jni = "0.16"
cds_enclave_ffi = { path = "../../../../../enclave-ffi-rust" }
sgx_sdk_ffi = { git = "https://github.com/signalapp/sgx_common.git", rev = "e9726911e4432edb402c299b2e126d5229270eb6" }
anyhow = "1.0.28"
thiserror = "1.0.16"

[lib]
crate_type = ["cdylib"]
